examples/test/testpolicy14474.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14474
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key1: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value47
          key43: value24
          key15: value34
      podSelector:
        matchLabels:
          key37: value29
